css/wprie-admin.css
#wprie-cropper-wrapper .media-modal-backdrop {
	z-index: 17000000;
}

#wprie-cropper-wrapper .media-modal {
	z-index: 17000001;
}

#wprie-cropper-wrapper .media-frame-content,#wprie-cropper-wrapper .media-frame-router,#wprie-cropper-wrapper .media-frame-title
	{
	left: 0;
}

#wprie-cropper-wrapper .media-frame-content {
	padding: 16px;
}

.wprie-not-existing-crop img {
	display: none;
}

.wprie-not-existing-crop p {
	font-style: italic;
	color: #ff0000;
}

